# svdistic

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  config.h  docker-compose.yml  param.py  run.sh  svd.cpp  svdpp.cpp  types.h
data/: good_test.txt  good_test_preds.txt
data/corpus/: dummy.data
data/utils/: all.sh  infer_rmse.py  recorrelate.py  rmse2csv.py  score_only.py
docker/dev/: Dockerfile
docker/prod/: Dockerfile
main/: modes.cpp  svdistic.cpp
misc/: dummy_param.py  infer.py  param.py  remote_setup.sh  run.sh
models/base/: base.cpp  base.h
models/svd/: helpers.cpp  model.cpp  model.h
models/svdpp/: helpers.cpp  model.cpp  model.h
models/timesvdpp/: helpers.cpp  model.cpp  model.h  time.cpp
preprocessing/: process.py  process.sh
svd/: model.cpp  model.h  tests.cpp  tests.h
svdpp/: model.cpp  model.h  tests.cpp  tests.h
utils/: pipes.cpp  pipes.h  tests.cpp  tests.h
weights/: test_W_i.txt  test_W_p.txt  test_Ysum.txt
